TraceSources update: use ID & Token from management
