# backend/pkg/rest/control_tracesources_controller.go
@@ -21,6 +21,8 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/google/uuid"
 	log "github.com/sirupsen/logrus"
 	"gorm.io/gorm"
 
@@ -61,18 +63,31 @@ func (s *Server) PostControlTraceSources(params operations.PostControlTraceSourc
 		Name:        *params.Body.Name,
 		Type:        string(*params.Body.Type),
 		Description: params.Body.Description,
+		ExternalID:  params.Body.ExternalID.String(),
+	}
+	if params.Body.Token != nil {
+		dbSource.Token = params.Body.Token
+	}
+	if dbSource.ExternalID == "" {
+		dbSource.ExternalID = uuid.New().String()
 	}
 	if err := s.dbHandler.TraceSourcesTable().CreateTraceSource(&dbSource); err != nil {
 		log.Errorf("Failed to create new TraceSource: %v", err)
 		return operations.NewPostControlTraceSourcesDefault(http.StatusInternalServerError)
 	}
 
+	var extID strfmt.UUID
+	if err := extID.UnmarshalText([]byte(dbSource.ExternalID)); err != nil {
+		log.Errorf("Can't read external ID as UUID: %v", err)
+		return operations.NewPostControlTraceSourcesDefault(http.StatusInternalServerError)
+	}
 	gw := models.TraceSource{
 		ID:          int64(dbSource.ID),
 		Name:        &dbSource.Name,
 		Type:        (*models.TraceSourceType)(&dbSource.Type),
 		Description: dbSource.Description,
 		Token:       dbSource.Token,
+		ExternalID:  extID,
 	}
 	return operations.NewPostControlTraceSourcesCreated().WithPayload(&gw)
 }
@@ -80,7 +95,7 @@ func (s *Server) PostControlTraceSources(params operations.PostControlTraceSourc
 func (s *Server) GetControlTraceSourcesTraceSourceID(params operations.GetControlTraceSourcesTraceSourceIDParams) middleware.Responder {
 	log.Debugf("GetControlTraceSourcesTraceSourceID controller was invoked")
 
-	dbSource, err := s.dbHandler.TraceSourcesTable().GetTraceSource(uint(params.TraceSourceID))
+	dbSource, err := s.dbHandler.TraceSourcesTable().GetTraceSourceFromExternalID(params.TraceSourceID.String())
 	if err != nil {
 		log.Errorf("Failed to get Trace Source: %v", err)
 		if errors.Is(err, gorm.ErrRecordNotFound) {
@@ -102,7 +117,7 @@ func (s *Server) GetControlTraceSourcesTraceSourceID(params operations.GetContro
 func (s *Server) DeleteControlTraceSourcesTraceSourceID(params operations.DeleteControlTraceSourcesTraceSourceIDParams) middleware.Responder {
 	log.Debugf("DeleteControlTraceSourcesTraceSourceID controller was invoked")
 
-	if err := s.dbHandler.TraceSourcesTable().DeleteTraceSource(uint(params.TraceSourceID)); err != nil {
+	if err := s.dbHandler.TraceSourcesTable().DeleteTraceSourceFromExternalID(params.TraceSourceID.String()); err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			return operations.NewDeleteControlTraceSourcesTraceSourceIDNotFound()
 		}
